--- a/styles/style.css
+++ b/styles/style.css
@@ -58,43 +58,51 @@
     height: 3.5vh;
 } 
 
-.slideshow-container {
-    position: relative;
-    width: 100%;
-    padding-top: 70vh;
-    overflow: hidden;
-}
-
 .slide {
+    display: none;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+.prev, .next {
+    cursor: pointer;
     position: absolute;
-    top: 0;
-    left: 100%;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    transition: opacity 1s ease;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
-
-.slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
 }
-
-@keyframes slideAnimation {
-    0% { left: 100%; opacity: 0; }
-    10% { left: 0; opacity: 1; }
-    30% { left: 0; opacity: 1; }
-    40% { left: -100%; opacity: 0; }
-    100% { left: -100%; opacity: 0; }
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
 }
-
-.slideshow-container .slide:nth-child(1) {
-    animation: slideAnimation 12s infinite;
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
-
-.slideshow-container .slide:nth-child(2) {
-    animation: slideAnimation 12s infinite 4s;
+.active, .dot:hover {
+    background-color: #717171;
 }
 
 .get-points {
